--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,7 +10,7 @@ def computeVersionName() {
 buildscript {
     repositories {
         jcenter()
-        google()
+        // google()
     }
 
     dependencies {
